--- a/views/dispatchno.ejs
+++ b/views/dispatchno.ejs
@@ -166,7 +166,7 @@
               type="button"
               data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasWithBothOptions"
-              aria-controls="offcanvasWithBothOptions">
+              aria-controls="offcanvasWithBothOptions" onclick="openViewModal('<%= dat.despatchnoteno %>','<%= dat.despatchdate %>','<%= dat.unit.name %>','<%= dat.unit.province %>','<%= dat.unit.contactperson %>', '<%=  JSON.stringify(dat.despatchitems) %>')">
               <i class="fas fa-eye"></i>
               <!-- Font Awesome eye icon -->
             </button>
@@ -203,21 +203,11 @@
               </div>
             
             <div class="row">
-                <div class="col-md-6">
-                  <h5>Delivered by:</h5>
-                  <p>Agrifora (Pvt) Ltd<br>
-                    28A Woodholme Rd<br>
-                  Harare<br>
-                  Delivery No. <span style="color: red;"><b>001</b></span></p>
-        
-                  <p>Date: 02/04/2024</p>
+                <div class="col-md-6" id="dd1">
+                  
                 </div>
-                <div class="col-md-6 text-end">
-                  <h5>Delivered to:</h5>
-                  <p>ZNA :<br>
-                  Unit : 13 INF BN<br>
-                  Location: PLUMTREE<br>
-                  Delivery Point: 13 INF BN (PLUMTREE)</p>
+                <div class="col-md-6 text-end" id="dd2">
+                h
                 </div>
               </div>
             <table class="table table-borderedless">
@@ -230,42 +220,9 @@
                   <th>Qty Received</th>
                 </tr>
               </thead>
-              <tbody>
-                <tr>
-                  <td>1.</td>
-                  <td>Cabbage</td>
-                  <td>Kg</td>
-                  <td>150.00</td>
-                  <td>150.00</td>
-                </tr>
-                <tr>
-                  <td>2.</td>
-                  <td>Tomatoes</td>
-                  <td>Kg</td>
-                  <td>150.00</td>
-                  <td>150.00</td>
-                </tr>
-                <tr>
-                  <td>3.</td>
-                  <td>Onions</td>
-                  <td>Kg</td>
-                  <td>50.00</td>
-                  <td>50.00</td>
-                </tr>
-                <tr>
-                  <td>4.</td>
-                  <td>Apples</td>
-                  <td>Kg</td>
-                  <td>250.00</td>
-                  <td>250.00</td>
-                </tr>
-                <tr>
-                  <td>5.</td>
-                  <td>Bananas</td>
-                  <td>Kg</td>
-                  <td>120.00</td>
-                  <td>120.00</td>
-                </tr>
+              <tbody id="dd4">
+               
+               
               </tbody>
             </table>
             <br></br>
@@ -276,13 +233,8 @@
                     <img src="sirius-assets/images/logos/sirius-logo.png" alt="Agrifora Represantative's ID" style="max-width: 200px;">
                   </div>
                 </div>
-                <div class="col-md-6 text-end">
-                  <p><b>Received by and on behalf of ZNA</b><p>
-                 <p> Smile Nkomo<br>
-                  Unit : 13 INF BN<br>
-                  Location: PLUMTREE<br>
-                  Delivery Point: 13 INF BN (PLUMTREE)<br>
-                  <p>Date: 02/04/2024</p>
+                <div class="col-md-6 text-end" id="dd3">
+                 
                 </div>
               </div>
           </div>
@@ -297,7 +249,7 @@
         <!-- End of Print and Save buttons -->
       </div>
     </div>
-
+  
     <!-- Footer container -->
     <div class="main-footer">
       <span>&copy; 2023. Agrifora Management System. All Rights Reserved.</span>
@@ -358,5 +310,60 @@
         pdfPreview.src = pdfUrl; // Load the PDF in the iframe
       });
     });
+  </script>
+  <script>
+    function openViewModal(dnoteno,dnotedate,unitname,unit_province,unit_contact_person, despatchitemsJSON) {
+ console.log(unitname)
+
+  const dd1 = document.getElementById('dd1');
+  const dd2 = document.getElementById('dd2');
+  const dd3 = document.getElementById('dd3');
+  const dd4 = document.getElementById('dd4');
+
+  dd1.innerHTML = ``
+  dd1.innerHTML = `<h5>Delivered by:</h5>
+                  <p>Agrifora (Pvt) Ltd<br>
+                    28A Woodholme Rd<br>
+                  Harare<br>
+                  Delivery No. <span style="color: red;"><b>${dnoteno}</b></span></p>
+        
+                  <p>Date: ${dnotedate}</p>`
+          
+  dd2.innerHTML = ``
+  dd2.innerHTML = `  <h5>Delivered to:</h5>
+                  <p>ZNA :<br>
+                  Unit : ${unitname}<br>
+                  Location: ${unit_province}<br>
+                  Delivery Point: ${unitname}</p>`
+  dd3.innerHTML = ``
+  dd3.innerHTML = ` <p><b>Received by and on behalf of ZNA</b><p>
+                 <p> ${unit_contact_person}<br>
+                  Unit : ${unitname}<br>
+                  Location: ${unit_province}<br>
+                  Delivery Point: ${unitname}<br>
+                  <p>Date: ${dnotedate}</p>`
+  
+  let despatchitems = JSON.parse(despatchitemsJSON)                    
+  dd4.innerHTML = ``
+  let count =1;
+  dd4.innerHTML = ``;
+          despatchitems.forEach((product) => {
+            
+                 dd4.innerHTML += `
+                 <tr>
+              <td>${count}</td>
+              <td>${product.product.name}</td>
+              <td>${product.product.measureunit.symbol}</td>
+              <td>${product.quantity}</td>
+              <td>${product.received}</td>
+                 </tr>
+                 
+                 `;
+           
+                count +=1
+           
+             });
+            }
+          
   </script>
 </div>
