--- a/views/index.ejs
+++ b/views/index.ejs
@@ -485,12 +485,12 @@
                 <td><%= moment(dat.despatchdate).format('DD/MM/YY') %></td>
                 <td><%= dat.unit.name %></td>
                 <td>
-                  <a
+                  <button
                     href="#"
                     data-bs-toggle="modal"
-                    data-bs-target="#deliveryModal">
+                    data-bs-target="#deliveryModal" onclick="openViewModal('<%= dat.despatchnoteno %>','<%= dat.despatchdate %>','<%= dat.unit.name %>','<%= dat.unit.province %>','<%= dat.unit.contactperson %>', '<%=  JSON.stringify(dat.despatchitems) %>')">
                     <i class="fas fa-eye"></i>
-                  </a>
+                </button>
                 </td>
               </tr>
               <% } %> <% } %> <% } %>
@@ -521,14 +521,64 @@
               </div>
               <div
                 class="modal-body d-flex justify-content-center align-items-center">
-                <!-- Include your PDF viewer here, e.g., an iframe or PDF.js -->
-                <!-- Replace the source URL with your PDF document -->
-                <iframe
-                  src="./sirius-assets/D12712.pdf"
-                  class="w-100"
-                  height="600"
-                  frameborder="0"></iframe>
+                <div
+          class="embed-responsive embed-responsive-16by9"
+          style="height: 794px">
+          <div class="container my-5">
+            <div class="text-center">
+                <img src="sirius-assets/images/logos/sirius-logo.png" alt="Logo" style="max-width: 150px;">
+                <h3 class="text-center mb-4">Delivery Note</h3>
               </div>
+            
+            <div class="row">
+                <div class="col-md-6" id="dd1">
+                  
+                </div>
+                <div class="col-md-6 text-end" id="dd2">
+                h
+                </div>
+              </div>
+            <table class="table table-borderedless">
+                <thead class="table-primary">
+                <tr>
+                  <th>Product ID</th>
+                  <th>Description</th>
+                  <th>Unit Measure</th>
+                  <th>Qty Ordered</th>
+                  <th>Qty Received</th>
+                </tr>
+              </thead>
+              <tbody id="dd4">
+               
+               
+              </tbody>
+            </table>
+            <br></br>
+            <div class="row">
+                <div class="col-md-6 text-start">
+                  <p><b>Agrifora Representative:</b></p>
+                  <div class="text-start">
+                    <img src="sirius-assets/images/logos/sirius-logo.png" alt="Agrifora Represantative's ID" style="max-width: 200px;">
+                  </div>
+                </div>
+                <div class="col-md-6 text-end" id="dd3">
+                 
+                </div>
+              </div>
+          </div>
+        </div>
+        
+              </div>
+              <div class="modal-footer">
+                <!-- Print and Save buttons -->
+        <div>
+          <button class="btn btn-primary me-2" onclick="window.print()">
+            Print
+          </button>
+          <button class="btn btn-success">Save</button>
+        </div>
+        </div>
+
             </div>
           </div>
         </div>
@@ -664,4 +714,59 @@
       window.alert("Please select both From Date and To Date.");
     }
   }
+</script>
+<script>
+  function openViewModal(dnoteno,dnotedate,unitname,unit_province,unit_contact_person, despatchitemsJSON) {
+console.log(unitname)
+
+const dd1 = document.getElementById('dd1');
+const dd2 = document.getElementById('dd2');
+const dd3 = document.getElementById('dd3');
+const dd4 = document.getElementById('dd4');
+
+dd1.innerHTML = ``
+dd1.innerHTML = `<h5>Delivered by:</h5>
+                <p>Agrifora (Pvt) Ltd<br>
+                  28A Woodholme Rd<br>
+                Harare<br>
+                Delivery No. <span style="color: red;"><b>${dnoteno}</b></span></p>
+      
+                <p>Date: ${dnotedate}</p>`
+        
+dd2.innerHTML = ``
+dd2.innerHTML = `  <h5>Delivered to:</h5>
+                <p>ZNA :<br>
+                Unit : ${unitname}<br>
+                Location: ${unit_province}<br>
+                Delivery Point: ${unitname}</p>`
+dd3.innerHTML = ``
+dd3.innerHTML = ` <p><b>Received by and on behalf of ZNA</b><p>
+               <p> ${unit_contact_person}<br>
+                Unit : ${unitname}<br>
+                Location: ${unit_province}<br>
+                Delivery Point: ${unitname}<br>
+                <p>Date: ${dnotedate}</p>`
+
+let despatchitems = JSON.parse(despatchitemsJSON)                    
+dd4.innerHTML = ``
+let count =1;
+dd4.innerHTML = ``;
+        despatchitems.forEach((product) => {
+          
+               dd4.innerHTML += `
+               <tr>
+            <td>${count}</td>
+            <td>${product.product.name}</td>
+            <td>${product.product.measureunit.symbol}</td>
+            <td>${product.quantity}</td>
+            <td>${product.received}</td>
+               </tr>
+               
+               `;
+         
+              count +=1
+         
+           });
+          }
+        
 </script>
