--- a/views/index.ejs
+++ b/views/index.ejs
@@ -526,7 +526,7 @@
           style="height: 794px">
           <div class="container my-5">
             <div class="text-center">
-                <img src="sirius-assets/images/logos/sirius-logo.png" alt="Logo" style="max-width: 150px;">
+                <img src="/sirius-assets/images/logos/taguta.jpg" alt="Logo" style="max-width: 150px;">
                 <h3 class="text-center mb-4">Delivery Note</h3>
               </div>
             
@@ -575,7 +575,6 @@
           <button class="btn btn-primary me-2" onclick="window.print()">
             Print
           </button>
-          <button class="btn btn-success">Save</button>
         </div>
         </div>
 
